# Spotify-MCP-Server

./: .cleanignore  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  BUILD_SUMMARY.md  CHANGELOG.md  CLAUDE_DESKTOP_CONFIG.md  CONTRIBUTING.md  Dockerfile  EXECUTIVE_SUMMARY.md  FINAL_PERFECTION_REPORT.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_TIERS.md  INDEX.md  PHASE1_AUDIT.md  QUICKSTART.md  README.md  REPOSITORY_STRUCTURE.md  SECURITY.md  SETUP_ISSUES_RESOLVED.md  START_HERE.md  STATUS.md  STRUCTURE.md  STRUCTURE.txt  TEST_FIXES_COMPLETE.md  auth_test.py  auto_auth.py  diagnose_auth.py  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements-dev.txt  test_auth.py  test_config_integration.py  test_logging_integration.py  verify_setup.py
.archive/: CHANGELOG_v1.0.md  GITHUB_SETUP.md  IMPLEMENTATION_SUMMARY.md  PROJECT_SUMMARY.md  README_OLD.md  RESTRUCTURE_COMPLETE.md  RESTRUCTURE_PLAN.md
.github/: FUNDING.yml
.github/workflows/: docker.yml  quality.yml  release.yml  test.yml
docs/: API.md  CLEANUP_SUMMARY.md  CONTEXT_FIX.md  DEPLOYMENT.md  IMPROVEMENTS.md  INDEX.md  MIGRATION_STATUS_V3.md  PRE_PUSH_SECURITY_AUDIT.md  README.md  REPOSITORY_STRUCTURE.md  TOOLS.md  troubleshooting
docs/architecture/: DATABASE_ASSESSMENT.md  MCP_FEATURES.md  OVERVIEW.md
docs/audits/: IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  MCP_COMPLIANCE_AUDIT.md  PHASE1_SUMMARY.md  PHASE2_4_IMPLEMENTATION.md
docs/development/: CLEANUP_COMPLETE.md  PHASE_0_COMPLETE.md  PHASE_0_SUMMARY.md  PLAYLIST_ENHANCEMENT.md  PRETTY_SETUP_SUMMARY.md  SECURITY_AUDIT.md  SECURITY_AUDIT_REPORT.md  SECURITY_CHECKLIST.md  roadmap.md
docs/diagnostics/: auth-enhancements.md  tools-comparison.md
docs/enterprise/: README.md  implementation.md  quickstart.md  security.md
docs/fixes/: DOCUMENTATION_UPDATE_SUMMARY.md  INDEX.md  PYTHONPATH_FIX.md
docs/planning/: IMPLEMENTATION_ROADMAP_PART2.md  IMPLEMENTATION_ROADMAP_PART3.md  IMPLEMENTATION_ROADMAP_PART4.md  IMPLEMENTATION_ROADMAP_PART5_FINAL.md  PRIORITIZED_IMPLEMENTATION_PLAN.md
docs/setup/: CLAUDE_DESKTOP_SETUP.md  GET_STARTED.md  QUICKSTART.md  QUICK_SETUP.md  authentication.md  claude-desktop.md  troubleshooting.md
infrastructure/: README.md
infrastructure/grafana/provisioning/dashboards/: dashboard.yml
infrastructure/grafana/provisioning/datasources/: prometheus.yml
infrastructure/prometheus/: prometheus.yml
monitoring/grafana/: dashboard.json
monitoring/prometheus/alerts/: critical.yml
scripts/: README.md  diagnose_auth.py  enterprise_cli.py  generate_claude_config.py  verify_pretty_setup.py  verify_setup.py
src/spotify_mcp/: __init__.py  auth.py  metrics_server.py  models.py  prompts.py  resources.py  security.py  server.py  spotify_client.py  spotify_server.py
src/spotify_mcp/cli/: README.md  __init__.py  main.py  utils.py
src/spotify_mcp/cli/commands/: __init__.py  device.py  interactive.py  library.py  playback.py  playlist.py  search.py  status.py
src/spotify_mcp/config/: README.md  __init__.py  settings.py
src/spotify_mcp/infrastructure/: __init__.py  error_handling.py
src/spotify_mcp/infrastructure/cache/: __init__.py  decorators.py  interface.py  invalidation.py  manager.py  memory.py  redis.py  statistics.py  strategies.py  warming.py
src/spotify_mcp/infrastructure/logging/: README.md  __init__.py  logger.py
src/spotify_mcp/infrastructure/metrics/: README.md  __init__.py  collectors.py  exporters.py
src/spotify_mcp/infrastructure/resilience/: __init__.py  circuit_breaker.py  fallback.py  health_checks.py  rate_limiter.py  retry.py
src/spotify_mcp/tools/: __init__.py  albums.py  artists.py  audiobooks.py  batch_requests.py  categories.py  chapters.py  composite.py  composite_definitions.py  episodes.py  genres.py  library.py  markets.py  playback.py  playlists.py  queue.py  search.py  shows.py  tracks.py  user.py
tests/: TEST_REPORT.md  __init__.py  test_auth.py  test_caching_integration.py  test_cli_integration.py  test_config_integration.py  test_integration.py  test_logging_integration.py  test_mcp_server.py  test_metrics_integration.py  test_security.py  test_server_startup.py
tools/: ENDPOINT_TEST_REPORT.md  README.md  debug_audio_features.py  endpoint_test_results.json  mutation_test_results.json  setup_guide.py  test_all_endpoints.py  test_audio_features.py  test_auth.py  test_mutation_endpoints.py  test_new_playlists.py  verify_tools.py
