[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_backend"

[project]
name = "spotify-mcp"
version = "2.0.0"
description = "🎵 Complete Spotify control through AI - 75 tools, 8 resources, 8 prompts"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "N1KH1LT0X1N", email = ""},
]
keywords = ["spotify", "mcp", "ai", "model-context-protocol", "claude", "music", "assistant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "spotipy>=2.24.0",  # Security: Use latest stable
    "python-dotenv>=1.0.1",  # Security: CVE fixes
    "pydantic>=2.5.0",  # Security: Validation improvements
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]
security = [
    "keyring>=24.0.0",
]
cache = [
    "redis>=5.0.0",  # Redis cache backend (optional)
]
metrics = [
    "prometheus-client>=0.19.0",  # Metrics collection (optional)
]
cli = [
    "click>=8.1.0",  # CLI framework
    "rich>=13.0.0",  # Beautiful terminal output
]
all = [
    "redis>=5.0.0",
    "prometheus-client>=0.19.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "keyring>=24.0.0",
]

[project.scripts]
spotify-mcp = "spotify_mcp.server:main"
spotify-mcp-cli = "spotify_mcp.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src/spotify_mcp",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true
